--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="test">
         <div class="text">ALIEN</div>
-        <div class="credits" id="1">a Brandywine-Ronald Shusett production</div>
-        <div class="credits" id="2">a Ridley Scott film</div>
-        <div class="credits" id="3">Tom Skerrit</div>
-        <div class="credits" id="4">Sigourney Weaver</div>
-        <div class="credits" id="5">Veronica Cartwright</div>
-        <div class="credits" id="6">Harry Dean Stanton</div>
-        <div class="credits" id="7">John Hurt</div>
+        <div class="credits visible" id="1">a Brandywine-Ronald Shusett production</div>
+        <div class="credits visible" id="2">a Ridley Scott film</div>
+        <div class="credits visible" id="3">Tom Skerrit</div>
+        <div class="credits visible" id="4">Sigourney Weaver</div>
+        <div class="credits visible" id="5">Veronica Cartwright</div>
+        <div class="credits visible" id="6">Harry Dean Stanton</div>
+        <div class="credits visible" id="7">John Hurt</div>
     </div>
 </body>
 </html>
