--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="menu">
+        <div class="start">Start</div>
+    </div>
     <div class="test">
         <div class="text">ALIEN</div>
-        <div class="credits visible" id="1">a Brandywine-Ronald Shusett production</div>
-        <div class="credits visible" id="2">a Ridley Scott film</div>
-        <div class="credits visible" id="3">Tom Skerrit</div>
-        <div class="credits visible" id="4">Sigourney Weaver</div>
-        <div class="credits visible" id="5">Veronica Cartwright</div>
-        <div class="credits visible" id="6">Harry Dean Stanton</div>
-        <div class="credits visible" id="7">John Hurt</div>
+        <div class="credits visible" data-order="1">a Brandywine-Ronald Shusett production</div>
+        <div class="credits visible" data-order="2">a Ridley Scott film</div>
+        <div class="credits visible" data-order="3">Tom Skerrit</div>
+        <div class="credits visible" data-order="4">Sigourney Weaver</div>
+        <div class="credits visible" data-order="5">Veronica Cartwright</div>
+        <div class="credits visible" data-order="6">Harry Dean Stanton</div>
+        <div class="credits visible" data-order="7">John Hurt</div>
     </div>
 </body>
 </html>
