--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
         <div class="start">Start</div>
     </div>
     <div class="test">
-        <div class="text">ALIEN</div>
+        <div class="text">
+            <div class="letter" data-order="2">A</div>
+            <div class="letter" data-order="4">L</div>
+            <div class="letter" data-order="1">I</div>
+            <div class="letter" data-order="5">E</div>
+            <div class="letter" data-order="3">N</div>
+        </div>
         <div class="credits visible" data-order="1">a Brandywine-Ronald Shusett production</div>
         <div class="credits visible" data-order="2">a Ridley Scott film</div>
         <div class="credits visible" data-order="3">Tom Skerrit</div>
@@ -21,6 +27,8 @@
         <div class="credits visible" data-order="5">Veronica Cartwright</div>
         <div class="credits visible" data-order="6">Harry Dean Stanton</div>
         <div class="credits visible" data-order="7">John Hurt</div>
+        <div class="credits visible" data-order="8">Ian Holm</div>
+        <div class="credits visible" data-order="9">and Yaphet Kotto as Parker</div>
     </div>
 </body>
 </html>
