--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu">
-        <div class="start">Start</div>
+    <div class="menu visible">
+        <div class="button">
+            <a href="https://github.com/SEFFFFF/Alien-intro" class="link">GITHUB</a>
+            <a href="https://www.youtube.com/watch?v=6jJRvZ72fLs" class="link">ORIGINAL</a>
+        </div>
+        <div class="play">PLAY</div>      
     </div>
     <div class="test">
         <div class="text">
