--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="menu visible">
+    <div class="menu">
         <div class="button">
             <a href="https://github.com/SEFFFFF/Alien-intro" class="link">GITHUB</a>
             <a href="https://www.youtube.com/watch?v=6jJRvZ72fLs" class="link">ORIGINAL</a>
