--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
         <div class="credits visible" data-order="8">Ian Holm</div>
         <div class="credits visible" data-order="9">and Yaphet Kotto as Parker</div>
     </div>
+    <div class="stop"></div>
 </body>
 </html>
